--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@zq/configs": "link:",
     "commitizen": "^4.3.0",
     "eslint": "^9.8.0",
+    "load-json-file": "^7.0.1",
     "prettier": "^3.3.3",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4"
