--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "author": "Saltro",
   "license": "ISC",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "dependencies": {
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.8.0",
