--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
@@ -21,20 +21,7 @@ jobs:
         with:
           fetch-depth: 0
         if: ${{ steps.release.outputs.release_created }}
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: latest
-          run_install: false
-        if: ${{ steps.release.outputs.release_created }}
-      - name: Use Node.js 22
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22.x
-          cache: 'pnpm'
-        if: ${{ steps.release.outputs.release_created }}
-      - name: Install dependencies
-        run: pnpm install
+      - uses: ./.github/actions/init
         if: ${{ steps.release.outputs.release_created }}
       - name: Build
         run: pnpm build
