--- a/package.json
+++ b/package.json
@@ -23,6 +23,16 @@
   },
   "author": "Saltro",
   "license": "ISC",
+  "bugs": "https://github.com/ZiqiangStudio/zq_configs_sdk_frontend/issues",
+  "keywords": [
+    "configs",
+    "eslint-config",
+    "prettier-config"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ZiqiangStudio/zq_configs_sdk_frontend"
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
