--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "commit": "git-cz",
-    "test": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest"
+    "test": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "author": "Saltro",
   "license": "ISC",
@@ -63,7 +66,8 @@
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.4",
     "tsup": "^8.2.4",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitepress": "^1.3.3"
   },
   "prettier": "@zq/configs/prettier",
   "config": {
