--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           fetch-depth: 0
       - uses: ./.github/actions/init
+      - run: pnpm build
       - run: pnpm docs:build
       - uses: actions/upload-pages-artifact@v1.0.7
         with:
